# lemonade-nexus

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile.amzn2023  Dockerfile.ci  MESH_TRANSPORT_WORKLOG.md  README.md  build_flutter_windows.ps1  future-where-to-resume-left-off.md  windows-port-analysis.md  windows-port-implementation-plan.md  windows-port-status.md
crates/boringtun-ffi/: Cargo.toml
crates/boringtun-ffi/include/: boringtun_ffi.h
crates/boringtun-ffi/src/: lib.rs
crates/virtual-netstack/: Cargo.toml
crates/virtual-netstack/include/: virtual_netstack.h
crates/virtual-netstack/src/: bridge.rs  device.rs  lib.rs  stack.rs
crates/virtual-netstack/tests/: bridge_e2e.rs
projects/LemonadeNexus/: CMakeLists.txt
projects/LemonadeNexus/include/LemonadeNexus/ACL/: ACLService.hpp  IACLProvider.hpp  Permission.hpp
projects/LemonadeNexus/include/LemonadeNexus/Acme/: AcmeService.hpp  IAcmeProvider.hpp
projects/LemonadeNexus/include/LemonadeNexus/Api/: AdminApiHandler.hpp  AuthApiHandler.hpp  CertApiHandler.hpp  IRequestHandler.hpp  MeshApiHandler.hpp  OnboardApiHandler.hpp  PublicApiHandler.hpp  RelayApiHandler.hpp  RoutingApiHandler.hpp  TreeApiHandler.hpp
projects/LemonadeNexus/include/LemonadeNexus/Auth/: AuthMiddleware.hpp  AuthService.hpp  Ed25519AuthProvider.hpp  IAuthProvider.hpp  PasskeyAuthProvider.hpp  PasswordAuthProvider.hpp  TokenLinkAuthProvider.hpp
projects/LemonadeNexus/include/LemonadeNexus/Boringtun/: BoringtunService.hpp  IBoringtunProvider.hpp  IpRouter.hpp  UserspaceDataplane.hpp  WireProtocol.hpp
projects/LemonadeNexus/include/LemonadeNexus/Client/: ClientService.hpp  IClientProvider.hpp
projects/LemonadeNexus/include/LemonadeNexus/Core/: BinaryAttestation.hpp  CliModes.hpp  Coordinator.hpp  GovernanceService.hpp  HostnameGenerator.hpp  IService.hpp  ITeeAttestationProvider.hpp  OnboardingClient.hpp  RootKeyChain.hpp  ServerAdmissionService.hpp  ServerConfig.hpp  ServerIdentity.hpp  TeeAttestation.hpp  TeeAttestationTpm.hpp  TrustPolicy.hpp  TrustTypes.hpp
projects/LemonadeNexus/include/LemonadeNexus/Crypto/: CryptoTypes.hpp  ICryptoProvider.hpp  KeyWrappingService.hpp  ShamirSecretSharing.hpp  SodiumCryptoService.hpp
projects/LemonadeNexus/include/LemonadeNexus/Gossip/: GossipService.hpp  GossipTypes.hpp  IGossipProvider.hpp  MisbehaviorDetector.hpp  ServerCertificate.hpp
projects/LemonadeNexus/include/LemonadeNexus/IPAM/: IIPAMProvider.hpp  IPAMService.hpp  IPAMTypes.hpp
projects/LemonadeNexus/include/LemonadeNexus/Network/: ApiTypes.hpp  DdnsService.hpp  DnsService.hpp  HttpServer.hpp  IDnsProvider.hpp  IStunProvider.hpp  RateLimiter.hpp  StunService.hpp  UdpHolePunch.hpp  VirtualNetService.hpp
projects/LemonadeNexus/include/LemonadeNexus/Relay/: GeoRegion.hpp  IRelayDiscovery.hpp  IRelayProvider.hpp  RelayDiscoveryService.hpp  (+3 more)
projects/LemonadeNexus/src/: ServiceMain.cpp  main.cpp
projects/LemonadeNexus/src/ACL/: ACLService.cpp
projects/LemonadeNexus/src/Acme/: AcmeService.cpp
projects/LemonadeNexus/src/Api/: AdminApiHandler.cpp  AuthApiHandler.cpp  CertApiHandler.cpp  MeshApiHandler.cpp  OnboardApiHandler.cpp  PublicApiHandler.cpp  RelayApiHandler.cpp  RoutingApiHandler.cpp  TreeApiHandler.cpp
projects/LemonadeNexus/src/Auth/: AuthService.cpp  Ed25519AuthProvider.cpp  PasskeyAuthProvider.cpp  PasswordAuthProvider.cpp  TokenLinkAuthProvider.cpp
projects/LemonadeNexus/src/Boringtun/: BoringtunService.cpp  UserspaceDataplane.cpp
projects/LemonadeNexus/src/Client/: ClientService.cpp
projects/LemonadeNexus/src/Core/: BinaryAttestation.cpp  CliModes.cpp  Coordinator.cpp  GovernanceService.cpp  HostnameGenerator.cpp  OnboardingClient.cpp  RootKeyChain.cpp  ServerAdmissionService.cpp  ServerConfig.cpp  ServerIdentity.cpp  TeeAttestation.cpp  TeeAttestationTpm.cpp  TrustPolicy.cpp  TrustTypes.cpp
projects/LemonadeNexus/src/Crypto/: CryptoTypes.cpp  KeyWrappingService.cpp  ShamirSecretSharing.cpp  SodiumCryptoService.cpp
projects/LemonadeNexus/src/Gossip/: GossipService.cpp  MisbehaviorDetector.cpp  ServerCertificate.cpp
projects/LemonadeNexus/src/IPAM/: IPAMService.cpp
projects/LemonadeNexus/src/Network/: DdnsService.cpp  DnsService.cpp  HttpServer.cpp  RateLimiter.cpp  StunService.cpp  UdpHolePunch.cpp  VirtualNetService.cpp
projects/LemonadeNexus/src/Relay/: GeoRegion.cpp  RelayDiscoveryService.cpp  RelayService.cpp  ReputationEngine.cpp
projects/LemonadeNexus/src/Routing/: ConnectionTicket.cpp  IdentifierDerivation.cpp  RoutingCoordinationService.cpp
projects/LemonadeNexus/src/Storage/: FileStorageService.cpp
projects/LemonadeNexus/src/Tree/: PermissionTreeService.cpp  TreeTypes.cpp
projects/LemonadeNexus/src/WireGuard/: UserspaceDataplane.cpp  WireGuardAppleBridge.mm  WireGuardService.cpp  WireGuardWindowsBridge.cpp
projects/LemonadeNexusSDK/: CMakeLists.txt
projects/LemonadeNexusSDK/include/LemonadeNexusSDK/: BoringTunBackend.hpp  BoringtunMesh.hpp  Error.hpp  ITunnelBackend.hpp  Identity.hpp  LatencyMonitor.hpp  LemonadeNexusClient.hpp  MeshOrchestrator.hpp  RoutingConnectionPool.hpp  RoutingTypes.hpp  Types.hpp  WireGuardTunnel.hpp  boringtun_ffi.h  lemonade_nexus.h  wintun.h
projects/LemonadeNexusSDK/src/: BoringTunBackend.cpp  BoringtunMesh.cpp  CApi.cpp  Identity.cpp  LatencyMonitor.cpp  LemonadeNexusClient.cpp  MeshOrchestrator.cpp  PacketPump.cpp  RoutingConnectionPool.cpp  Types.cpp  WireGuardTunnel.cpp  main.cpp
tests/: CMakeLists.txt  test_acme.cpp  test_auth.cpp  test_boringtun_backend.cpp  test_crypto_types.cpp  test_dns.cpp  test_file_storage.cpp  test_geo_region.cpp  test_http_endpoints.cpp  test_ip_router.cpp  test_ipam.cpp  test_key_wrapping.cpp  test_misbehavior_detector.cpp  test_onboarding.cpp  test_permission_tree.cpp  test_permissions.cpp  test_rate_limiter.cpp  test_routing_coordination.cpp  test_routing_identifier.cpp  test_routing_pool.cpp  test_routing_security.cpp  test_seed_discovery.cpp  test_sodium_crypto.cpp  test_tee_attestation_tpm.cpp  test_trust.cpp  test_userspace_dataplane.cpp  test_virtual_e2e.cpp  test_wg_wire_protocol.cpp
(+285 files in other folders)
