[package]
name = "lemonade-virtual-netstack"
version = "0.1.0"
edition = "2021"

[lib]
# rlib alongside staticlib so `cargo test` can link the unit tests.
crate-type = ["staticlib", "rlib"]

[dependencies]
# smoltcp 0.11 / mio 1.0.x: last releases that build on rustc 1.75 (the
# toolchain corrosion uses here). Bump together when the toolchain moves.
smoltcp = { version = "=0.11.0", default-features = false, features = [
    "std",
    "medium-ip",
    "proto-ipv4",
    "socket-tcp",
    "socket-udp",
    "socket-icmp",
] }
mio = { version = "=1.0.3", features = ["os-poll", "net", "os-ext"] }
log = "0.4"
